deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-service
  template:
    metadata:
      labels:
        app: go-service
    spec:
      containers:
      - name: go-service
        image: go-service
        ports:
        - containerPort: 8080
